--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 		<link rel="stylesheet" href="/main.css" />
 		<link rel="stylesheet" href="/fonts/proximaNova/stylesheet.css" />
 		<link rel="stylesheet" href="/fonts/sfproDisplay/stylesheet.css" />
-
+    <link rel="apple-touch-icon" sizes="180x180" href="\icons\brands\favicon.webp"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="\icons\brands\favicon.webp" />
+    <link rel="icon" type="image/png" sizes="16x16" href="\icons\brands\favicon.webp" />
+    <link rel="manifest" href="/icons/site.webmanifest" />
 		<title>HR-Nafi</title>
 	</head>
 
@@ -16,89 +19,94 @@
 				<img src="/icons/Rectangle 40.png" alt="Bigblue-light" />
 			</div>
 		</div>
-		<header>
-			<div class="logo">
-				<img src="icons/logo.webp" alt="HR-Nafi logo" />
-			</div>
-			<nav class="nav-menu">
-				<ul>
-					<li><a href="#about">О нас</a></li>
-					<li><a href="#what-we-do">Наши услуги</a></li>
-					<li><a href="#team">Наша команда</a></li>
-					<li><a href="#reviews">Отзывы</a></li>
-					<li><a href="#academy">Отправить резюме</a></li>
-				</ul>
-			</nav>
-
-			<div class="sidebar">
-				<div class="sidebar-wrapper">
-					<button class="close">
-						<span class="line top"></span>
-						<span class="line middle"></span>
-						<span class="line bottom"></span>
-					</button>
-					<ul class="sidebar-list">
-						<li class="sidebar-item">
-							<a href="#about"> О нас </a>
-						</li>
-
-						<li class="sidebar-item">
-							<a href="#what-we-do"> Наши услуги </a>
-						</li>
-
-						<li class="sidebar-item">
-							<a href="#team"> Наша команда </a>
-						</li>
-
-						<li class="sidebar-item">
-							<a href="#reviews"> Отзывы </a>
-						</li>
-
-						<li class="sidebar-item">
-							<a href="#academy"> Отправить резюме </a>
-						</li>
-
-						<li class="sidebar-item">
-							<div class="social-media">
-								<a href="https://www.instagram.com/hr_nafi?igsh=NHJ1ZzBxYzU2MTN2" target="_blank">
-									<img src="/icons/instagram.png" alt="instagram" />
-								<a href="https://t.me/hrnafiuz" target="_blank"
-									><img src="icons/telegram.svg" alt="telegram-logo"
-								/></a>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</div>
-
-			<div class="wrapper-menu">
-				<button class="open">
-					<span class="line top"></span>
-					<span class="line middle"></span>
-					<span class="line bottom"></span>
-				</button>
-				<div class="social-media">
-					<a href="https://www.instagram.com/"
-						><img src="icons/instagram.svg" alt="instagram logo"
-					/></a>
-					<a href="https://web.telegram.org/a/"
-						><img src="icons/telegram.svg" alt="telegram-logo"
-					/></a>
-				</div>
-				<div class="lang">
-					<div class="Rus"><img src="/icons/Flags.svg" alt="rus-logo" />RU</div>
-				</div>
-			</div>
-		</header>
+    
+    <div class="header-super-wrapper">
+      <header>
+        <div class="header-wrapper">
+          <div class="logo">
+            <a href="/">
+            <img src="icons/logo.webp" alt="HR-Nafi logo" />
+            </a>
+          </div>
+          <nav class="nav-menu">
+            <ul>
+              <li><a href="#about">О нас</a></li>
+              <li><a href="#what-we-do">Наши услуги</a></li>
+              <li><a href="#team">Наша команда</a></li>
+              <li><a href="#reviews">Отзывы</a></li>
+              <li><a href="#academy">Отправить резюме</a></li>
+            </ul>
+          </nav>
+  
+          <div class="sidebar">
+            <div class="sidebar-wrapper">
+              <button class="close">
+                <span class="line top"></span>
+                <span class="line middle"></span>
+                <span class="line bottom"></span>
+              </button>
+              <ul class="sidebar-list">
+                <li class="sidebar-item">
+                  <a href="#about"> О нас </a>
+                </li>
+  
+                <li class="sidebar-item">
+                  <a href="#what-we-do"> Наши услуги </a>
+                </li>
+  
+                <li class="sidebar-item">
+                  <a href="#team"> Наша команда </a>
+                </li>
+  
+                <li class="sidebar-item">
+                  <a href="#reviews"> Отзывы </a>
+                </li>
+  
+                <li class="sidebar-item">
+                  <a href="#academy"> Отправить резюме </a>
+                </li>
+  
+                <li class="sidebar-item">
+                  <div class="social-media">
+                    <a href="https://www.instagram.com/hr_nafi?igsh=NHJ1ZzBxYzU2MTN2" target="_blank">
+                      <img src="/icons/instagram.png" alt="instagram" />
+                    </a>
+                    <a href="https://t.me/hrnafiuz" target="_blank">
+                      <img src="icons/telegram.svg" alt="telegram-logo"/>
+                    </a>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+  
+          <div class="wrapper-menu">
+            <button class="open">
+              <span class="line top"></span>
+              <span class="line middle"></span>
+              <span class="line bottom"></span>
+            </button>
+            <div class="social-media">
+              <a href="https://www.instagram.com/"
+                ><img src="icons/instagram.svg" alt="instagram logo"
+              /></a>
+              <a href="https://web.telegram.org/a/"
+                ><img src="icons/telegram.svg" alt="telegram-logo"
+              /></a>
+            </div>
+            <div class="lang">
+              <div class="Rus"><img src="/icons/Flags.svg" alt="rus-logo" />RU</div>
+            </div>
+          </div>
+        </div>
+      </header>
+    </div>
 
 		<main>
 			<section class="swiper">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
 						<img src="images/buildings.webp" alt="buildings" />
-
-						<!-- <img src="images/Frame 288.png" alt="ai" /> -->
-						<!-- <img src="images/Frame 289.png" alt="comand" /> -->
 						<div class="wrapper-for-img">
 							<div class="logo-image">
 								<img src="icons/logo.webp" alt="logo" />
@@ -162,38 +170,38 @@
 					<div class="partners-logos swiper-logos">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="/icons/brands/bionur.png" alt="bionur" />
+								<img src="/icons/bionur.png" alt="bionur" />
 							</div>
 							<div class="swiper-slide">
-								<img src="/icons/brands/casva.png" alt="casva" />
+								<img src="/icons/casva3.png" alt="casva" />
 							</div>
 							<div class="swiper-slide">
-								<img src="/icons/brands/express-logo.png" alt="sagExpress" />
+								<img src="/icons/express-logo.png" alt="sagExpress" />
 							</div>
 							<div class="swiper-slide">
-								<img src="/icons/brands/SAG-high.png" alt="sam-gilam" />
+								<img src="/icons/SAG-high.png" alt="sam-gilam" />
 							</div>
 							<div class="swiper-slide">
-								<img src="/icons/brands/samglass.png" alt="samGlass" />
+								<img src="/icons/samglass.png" alt="samGlass" />
 							</div>
 							<div class="swiper-slide">
-								<img src="/icons/brands/UZNUTS.png" alt="UZNUTS" />
+								<img src="/icons/UZNUTS.png" alt="UZNUTS" />
 							</div>
 							<div class="swiper-slide">
-								<img src="/icons/brands/XIVA.png" alt="Xiva" />
+								<img src="/icons/XIVA.png" alt="Xiva" />
 							</div>
 							<div class="swiper-slide">
-								<img src="/icons/brands/rombo.png" alt="rombo" />
+								<img src="/icons/rombo.png" alt="rombo" />
 							</div>
 							<div class="swiper-slide">
-								<img src="/icons/brands/lazona.png" alt="lazona" />
+								<img src="/icons/lazona.png" alt="lazona" />
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
 
-			<section class="employees-container">
+			<section class="employees-container" id="about">
 				<div class="employees">
 					<h1>
 						Мы подбираем <b>ключевых <br />сотрудников</b>
@@ -221,9 +229,11 @@
 							развития ключевых направлений нашей компании.
 						</p>
 
-						<a href="contact-container" class="contact-container">
-							<h3>Связаться с нами</h3>
-						</a>
+						<div class="contact-container">
+              <a href="tel:+998 93 721 72 54">
+                <h3>Связаться с нами</h3>
+              </a>
+            </div>
 					</div>
 				</div>
 				<div class="video-container">
@@ -236,7 +246,7 @@
 				</div>
 			</section>
 
-			<section class="values-container">
+			<section class="values-container" id="what-we-do">
 				<div class="values-text">
 					<h2>Наши ценности</h2>
 				</div>
@@ -385,7 +395,7 @@
 				<img src="/icons/Vector 2.png" alt="bluelight" />
 			</div>
 
-			<section class="our-team-container">
+			<section class="our-team-container" id="team">
 				<div class="team-text">
 					<h3>Наша команда</h3>
 					<p>
@@ -412,11 +422,6 @@
 							<h4>Наташа Петровна</h4>
 							<p>HR Рекрутёр</p>
 						</div>
-						<div class="swiper-slide" id="fourth">
-							<img src="/images/4.png" alt="" />
-							<h4>Хусниддин Тоджиев</h4>
-							<p>Финансист</p>
-						</div>
 						<div class="swiper-slide" id="fifth">
 							<img src="/images/5.png" alt="" />
 							<h4>Дамир Давлятов</h4>
@@ -439,7 +444,7 @@
 				</div>
 			</section>
 
-			<section class="reviews-container">
+			<section class="reviews-container" id="reviews">
 				<div class="reviews-text">
 					<h3>Отзывы наших клиентов</h3>
 					<p>
@@ -513,7 +518,9 @@
 						<h3>Контакты</h3>
 
 						<div class="contact">
-							<p>+998 (90) 470 70 16</p>
+              <a href="tel:+998937217254">
+								<p>+998 93 721 72 54</p>
+							</a>
 							<p id="special">info@hrnafi.com</p>
 						</div>
 						<p>
