fixed footed navigation

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<img src="/icons/Rectangle 40.png" alt="Bigblue-light" />
 			</div>
 		</div>
-    
+
     <div class="header-super-wrapper">
       <header>
         <div class="header-wrapper">
@@ -37,7 +37,7 @@
               <li><a href="#academy">Отправить резюме</a></li>
             </ul>
           </nav>
-  
+
           <div class="sidebar">
             <div class="sidebar-wrapper">
               <button class="close">
@@ -49,23 +49,23 @@
                 <li class="sidebar-item">
                   <a href="#about"> О нас </a>
                 </li>
-  
+
                 <li class="sidebar-item">
                   <a href="#what-we-do"> Наши услуги </a>
                 </li>
-  
+
                 <li class="sidebar-item">
                   <a href="#team"> Наша команда </a>
                 </li>
-  
+
                 <li class="sidebar-item">
                   <a href="#reviews"> Отзывы </a>
                 </li>
-  
+
                 <li class="sidebar-item">
                   <a href="#academy"> Отправить резюме </a>
                 </li>
-  
+
                 <li class="sidebar-item">
                   <div class="social-media">
                     <a href="https://www.instagram.com/hr_nafi?igsh=NHJ1ZzBxYzU2MTN2" target="_blank">
@@ -79,7 +79,7 @@
               </ul>
             </div>
           </div>
-  
+
           <div class="wrapper-menu">
             <button class="open">
               <span class="line top"></span>
@@ -507,10 +507,10 @@
 				<div class="wrappers-two">
 					<div class="info-wrapper">
 						<h3>Информация</h3>
-						<p>О нас</p>
-						<p>Наши услуги</p>
-						<p>Наша команда</p>
-						<p>Отзывы</p>
+						<p><a href="#about">О нас</a></p>
+						<p><a href="#what-we-do">Наши услуги</a></p>
+						<p><a href="#team">Наша команда</a></p>
+						<p><a href="#reviews">Отзывы</a></p>
 						<p>Отправить резюме</p>
 					</div>
 
