--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 						</div>
 					</div>
 					<div class="swiper-slide">
-						<img src="images/ai.png" alt="chess" />
+						<img src="images/AI.png" alt="ai" />
 						<div class="wrapper-for-img">
 							<div class="logo-image">
 								<img src="icons/logo.webp" alt="logo" />
@@ -148,7 +148,7 @@
 						</div>
 					</div>
 					<div class="swiper-slide">
-						<img src="images/buttons.png" alt="chess" />
+						<img src="images/buttons.png" alt="buttons" />
 						<div class="wrapper-for-img">
 							<div class="logo-image">
 								<img src="icons/logo.webp" alt="logo" />
