writing eng version

--- a/index.html
+++ b/index.html
@@ -94,9 +94,19 @@
                 ><img src="icons/telegram.svg" alt="telegram-logo"
               /></a>
             </div>
+
             <div class="lang">
-              <div class="Rus"><img src="/icons/Flags.svg" alt="rus-logo" />RU</div>
-            </div>
+				<div class="Rus">
+					<img src="/icons/Flags.svg" alt="rus-logo" />RU
+					
+					<div class="dropdown">
+						<a href="en/index.html" class="dropdown-item Rus" ><img src="/icons/eng.png" alt="eng-logo">EN</a>
+						<div class="dropdown-item Rus"><img src="/icons/uzb.png" alt="uzb-logo">UZ</div>
+					</div>
+				</div>
+			</div>
+
+
           </div>
         </div>
       </header>
@@ -135,7 +145,7 @@
 						</div>
 					</div>
 					<div class="swiper-slide">
-						<img src="images/AI.png" alt="ai" />
+						<img src="images/ai.png" alt="ai" />
 						<div class="wrapper-for-img">
 							<div class="logo-image">
 								<img src="icons/logo.webp" alt="logo" />
@@ -148,7 +158,7 @@
 						</div>
 					</div>
 					<div class="swiper-slide">
-						<img src="images/buttons.png" alt="buttons" />
+						<img src="images/buttons.jpeg" alt="buttons" />
 						<div class="wrapper-for-img">
 							<div class="logo-image">
 								<img src="icons/logo.webp" alt="logo" />
